base/postgres/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres    # Make sure this name matches in patches
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17.1
        ports:
        - containerPort: 5432
