base/postgres/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
