base/postgres/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres
  labels:
    traefik.tcp.routers: "postgres"
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: postgresql-primary
          namespace: database
          port: 5432
